# ProfinetConverter

./: .gitignore  README.md  docker-compose.yml  profinet_pb2.py
ProfinetMicroservice/: CMakeLists.txt  CMakePresets.json  ProfinetMicroservice.cpp  ProfinetMicroservice.h  vcpkg.json
ProfinetMicroservice/Protos/: profinet.proto
Profinet_python/: pn_brute.py  profinet.proto  profinet_pb2_grpc.py  server.crt  server.key
Protos/: profinet.grpc.pb.cc  profinet.grpc.pb.h  profinet.pb.cc  profinet.pb.h  profinet.proto
backend/: Dockerfile.csharp  ProfinetConverter.slnx
backend/ProfinetApi/: ProfinetApi.csproj  ProfinetApi.http  Program.cs
backend/ProfinetApi.Application/: IProfinetRuntimeService.cs  ProfinetApi.Application.csproj
backend/ProfinetApi.Application/DTOs/: CommandDto.cs  GsdmlModuleDto.cs  GsdmlSlotDto.cs  Iec104ServerDto.cs  IecChannelConfigDto.cs  IecChannelDto.cs  IecCommandDto.cs  IecNetworkInterfaceDto.cs  IecSignalDto.cs  NetworkInterfaceDto.cs  ProfinetServerDto.cs  ProjectDto.cs  ServerDtoBase.cs  SignalDto.cs  SignalMappingDto.cs  StartProfinetDto.cs  StationConfigDto.cs  StationDto.cs
backend/ProfinetApi.Application/ServiceInterfaces/: IConfigurationService.cs  IIec104RuntimeService.cs  IProfinetRuntimeService.cs
backend/ProfinetApi.Application/Services/: ConfigurationService.cs  IConfigurationService.cs  IIec104RuntimeService.cs  IProfinetGrpcService.cs  IProfinetRuntimeService.cs  IProfinetScannerService.cs  ProfinetScannerService.cs
backend/ProfinetApi.Domain/: ProfinetApi.Domain.csproj
backend/ProfinetApi.Domain/Entities/: InterfaceBase.cs  NetworkInterface.cs  ProfinetNode.cs  ProfinetServer.cs  Project.cs  ServerBase.cs  ServerType.cs  SignalData.cs  Station.cs
backend/ProfinetApi.Domain/Interfaces/: IProjectRepository.cs
backend/ProfinetApi.Domain/RepoInterfaces/: IProjectRepository.cs
backend/ProfinetApi.Infrastructure/: ProfinetApi.Infrastructure.csproj
backend/ProfinetApi.Infrastructure/Hubs/: RuntimeHub.cs
backend/ProfinetApi.Infrastructure/Repositories/: InMemoryProjectRepository.cs
backend/ProfinetApi.Infrastructure/Services/: ConfigurationService.cs  Iec104RuntimeService.cs  NetworkInterfaceJsonConverter.cs  ProfinetGrpcService.cs  ProfinetRuntimeService.cs  (+1 more)
converterService/: .gitmodules  converterService.slnx  converterService.vcxproj  converterService.vcxproj.filters
converterService/converterService/: config.cpp  config.h  converterService.filters  converterService.vcxproj  data_pool.cpp  data_pool.h  iec104_server.cpp  iec104_server.h  logger.cpp  logger.h  main.cpp  profinet_controller.cpp  profinet_controller.h  rest_api.h
web/: index.html  package.json  vite.config.js
web/src/: App.vue
(+54 files in other folders)
